named figure panels

--- a/Chapter10.Rmd
+++ b/Chapter10.Rmd
@@ -153,12 +153,16 @@ plot(precis(mod3))
 All of the interactions still overlap with 0, but some trend positive or negative. Now generate predictions for different combinations of wine, judge, and flight to make these effects more interpretable. 
 
 ```{r}
-predictions = data.frame(wineamer = c(0,0,0,0,1,1,1,1),
-                         judgeamer = c(1,1,0,0,1,1,0,0),
-                         flight = c(1,0,1,0,1,0,1,0))
-means = data.frame(link(mod3, predictions)) %>% 
-  gather()
+predictions = data.frame(wineamer = c(1,1,1,1,2,2,2,2),
+                         judgeamer = c(2,2,1,1,2,2,1,1),
+                         flight = c(2,1,2,1,2,1,2,1))
 
+means = data.frame(link(mod3, predictions)) %>% 
+  rename(FW_AJ_WW = X1, FW_AJ_RW = X2, FW_FJ_WW = X3, FW_FJ_RW = X4, AW_AJ_WW = X5, AW_AJ_RW = X6, AW_FJ_WW = X7, AW_FJ_RW = X8) %>% 
+  gather()
+```
+
+```{r, fig.height=8}
 ggplot(means, aes(x = value)) +
   geom_histogram() +
   facet_grid(key ~ .)
