--- a/2020_07_13.Rmd
+++ b/2020_07_13.Rmd
@@ -2,7 +2,9 @@
 title: "2020_07_13"
 author: "Megan Bontrager"
 date: "7/13/2020"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
