--- a/Chapter16.1.Rmd
+++ b/Chapter16.1.Rmd
@@ -106,13 +106,20 @@ hist(d$h) # 0 to 1.3
 hist(d$w) # 0 to 1.6
 
 pr = extract.prior(m16.1)
-mu = link(m16.1, post = pr, data = list(h = h_seq))
+mu = as.matrix(link(m16.1, post = pr, data = list(h = h_seq)))
 summary(exp(mu[,2]))
 plot(d$h, d$w, xlim = c(0, max(d$h)), ylim = c(0, max(d$w)), col = rangi2, lwd = 2, xlab = "height (scaled)", ylab = "weight (scaled)")
-mu_mean = apply(mu, 2, mean)
-w_CI = apply(mu, 2, PI)
-lines(h_seq, exp(mu_mean))
-shade(exp(w_CI), h_seq)
+# mu_mean = apply(mu, 2, mean)
+# w_CI = apply(mu, 2, PI)
+# lines(h_seq, exp(mu_mean))
+# shade(exp(w_CI), h_seq)
+for (i in 1:1000){ 
+  lines(h_seq, exp(mu[i,]), col = col.alpha("black", 0.2))
+  }
 
 ```
+
+
+
+
 
